fixed horizontal scroll issue in account summary

--- a/src/app/create-task/account/account-summary/account-summary.component.html
+++ b/src/app/create-task/account/account-summary/account-summary.component.html
@@ -1,4 +1,4 @@
-<div class="account-summary">
+<div class="col-md-12 content-panels no-pad myclass account-summary">
     <div>
         The available Tasks are in the Actions menu to the left. Select the Task that you want to create for the
         selected account. You will be guided through the screens to provide details for that Task.
