--- a/src/app/create-task/account/account-summary/account-summary.component.scss
+++ b/src/app/create-task/account/account-summary/account-summary.component.scss
@@ -17,7 +17,28 @@
                 text-decoration: none;
                 margin-bottom: 10px;
                 @include section-heading(#000);
+
+                i {
+                    float: right;
+                }
             }
+            
+            div.dropdown-container {
+                padding-left: 20px;
+                display: none;
+            }
+
+            div.dropdown-container.active {
+                display: block;
+            }
+
+
+        }
+
+        .clearfix::after {
+            content:'';
+            clear: both;
+            display: table;
         }
     }
 }
