--- a/src/app/create-task/account/account-search/account-search.component.scss
+++ b/src/app/create-task/account/account-search/account-search.component.scss
@@ -1,29 +1,22 @@
+@import "../../../../assets/scss/variables.scss";
 .content-panels{
-    padding-left: 14px;
-    padding-right: 10px;
-    background-color: white;
+    padding-left: $pad-14 !important;
+    padding-right: $pad-10 !important;
+    background-color: $white-col;
     .task-headers{
-        font-size: 23px;
-        font-weight: 700;
-        padding-bottom: 8px;
+        font-size: $font-23;
+        font-weight: $font-bold;
+        padding-bottom: $pad-8;
         padding-top: 8px;
     }
     .content-text{
-        font-weight: bold;
+        font-weight: $font-bold;
     }
 }
-::ng-deep p-panel{
-    .ui-panel{
-        .ui-panel-titlebar{
-            background-color: #613c1f;
-            color: white;
-        }
 
-    }
-}
 .acc-label-pad{
-    font-weight: bold;
-    padding-top: 8px;
+    font-weight: $font-bold;
+    padding-top: $pad-8;
 }
 .second-container{
     margin-top: 25px;
