--- a/src/app/create-task/account/account-summary/account-summary.component.html
+++ b/src/app/create-task/account/account-summary/account-summary.component.html
@@ -1,4 +1,4 @@
-<div class="col-md-12 content-panels no-pad myclass account-summary">
+<div class="col-md-12 content-panels no-pad myclass account-summary container-pad">
     <div>
         The available Tasks are in the Actions menu to the left. Select the Task that you want to create for the
         selected account. You will be guided through the screens to provide details for that Task.
@@ -7,7 +7,7 @@
         <strong>Tasks associated to this account are listed in the Tasks tab.</strong>
     </div>
     <div class="row details-and-actions">
-        <div class="col-sm-3 actions">
+        <div class="col-sm-3 actions panel-aacount-summary ">
             <p-panel [toggleable]="true" [expandIcon]="'pi pi-angle-down'" [collapseIcon]="'pi pi-angle-up'">
                 <p-header>
                     Actions
