--- a/src/app/create-task/account/account-summary/account-details/account-details.component.scss
+++ b/src/app/create-task/account/account-summary/account-details/account-details.component.scss
@@ -1,17 +1,16 @@
+@import "../../../../../assets/scss/variables.scss";
 .details {
-
     .details-tab-heading {
-        background-color: #613c1f;
-        padding: 10px 0;
-        color: #fff;
-        font-size: 14px;
+        background-color: $main-color;
+        padding: 10px 14px;
+        color: $white-col;
+        font-size: $font-14;
         font-weight: 600;
     }
 
     .details-tab-content {
         background-color: rgb(214, 214, 214);
-        padding: 5px;
-        font-size: 14px;
-        font-weight: 500;
+        padding: 20px;
+        font-size: $font-14;
     }
 }
