--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,6 +1,6 @@
 <div class="container">
     <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
-        <div class="container"> 
+        <div class="container-2"> 
             
             <label><b>Username</b></label> 
             <input type="text" placeholder="Enter Username" formControlName="username" class="form-control"> 
@@ -11,11 +11,6 @@
             <button type="submit" class="login">Login</button> 
             <input type="checkbox" checked="checked"> Remember me 
         
-        </div> 
-  
-        <div class="container" style="background-color:#f1f1f1"> 
-            <button type="button" class="cancelbtn">Cancel</button> 
-            <span class="psw">Forgot <a href="#">password?</a></span> 
         </div> 
     </form>
     </div>
