--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -30,15 +30,6 @@ button{
 button:hover { 
     opacity: 0.8; 
 } 
-/*set extra style for the cancel button*/ 
-.cancelbtn { 
-    width: auto; 
-    padding: 10px 18px; 
-    background-color: #f44336; 
-} 
-/*centre the display image inside the container*/ 
-  
-  
 
 /*set padding to the container*/ 
   
@@ -46,20 +37,15 @@ button:hover {
     padding: 16px; 
     width: 500px;
 } 
+
+.container-2{
+    padding: 16px; 
+    width: 435px;
+}
 /*set the forgot password text*/ 
   
 span.psw { 
     float: right; 
     padding-top: 16px; 
 }
- /*set styles for span and cancel button on small screens*/ 
-      
- @media screen and (max-width: 300px) { 
-    span.psw { 
-        display: block; 
-        float: none; 
-    } 
-    .cancelbtn { 
-        width: 100%; 
-    } 
-} 
+ 
