--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
 
-@import "assets/scss/layout.scss"
+@import "assets/scss/menubar.scss";
+@import "assets/scss/common.scss";
+@import "assets/scss/panel.scss";
+@import "assets/scss/variables.scss";
+@import "assets/scss/pie-chart.scss"
+
+
