account-summary - back button added

--- a/src/app/create-task/account/account-summary/account-summary.component.html
+++ b/src/app/create-task/account/account-summary/account-summary.component.html
@@ -67,6 +67,10 @@
                 </p-tabPanel>
 
             </p-tabView>
+            <div class="back-btn">
+                <p-button label="Back" (click)="handleBackBtnClick()" styleClass="ui-button-info">
+                </p-button>
+            </div>
         </div>
     </div>
 </div>
