--- a/src/app/create-task/account/account-summary/account-summary.component.scss
+++ b/src/app/create-task/account/account-summary/account-summary.component.scss
@@ -21,16 +21,15 @@
                 padding: 1px 0px;
                 font-size: $font-13 !important;
                 font-weight: $font-normal !important;
-                :hover{
-                    text-decoration: underline;
-                }
                 @include section-heading(#000);
-
+               
                 i {
                     float: $right;
                 }
             }
-            
+            a:hover{
+                color:$blue-col
+            }
             div.dropdown-container {
                 padding-left: 20px;
                 display: $none-val;
