removed account number from router, added shared service

--- a/src/app/create-task/actions/contact-center/task-detail/task-detail.component.html
+++ b/src/app/create-task/actions/contact-center/task-detail/task-detail.component.html
@@ -38,9 +38,11 @@
     </div>
   </div>
   <div class="row col-md-12">
-    <div class=" col-md-4">
+    <div class=" col-md-1">
       <label class="task-detail-label">Call Details</label>
-      <p-editor [style]="{'height':'320px'}"></p-editor>
+    </div>
+    <div class="editor-pad col-md-7">
+      <p-editor [style]="{'height':'200px'}"></p-editor>
     </div>
   </div>
 </div>
