--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -52,7 +52,7 @@
 .dropdown-menu-item{
     position: absolute;
     top: 100%;
-    left: 0;
+    left: -134px;
     z-index: 1000;
     float: left;
     min-width: 10rem;
