--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,13 +1,21 @@
 <div class="container">
+    <alert></alert>
     <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
         <div class="container-2"> 
-            
+            <div class="form-group"> 
             <label><b>Username</b></label> 
-            <input type="text" placeholder="Enter Username" formControlName="username" class="form-control"> 
-  
+            <input type="text" placeholder="Enter Username" formControlName="username" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.username.errors }"> 
+            <div *ngIf="submitted && f.username.errors" class="invalid-feedback">
+                <div *ngIf="f.username.errors.required">Username is required</div>
+            </div>
+            </div>
+            <div class="form-group">
             <label><b>Password</b></label> 
-            <input type="password" placeholder="Enter Password" formControlName="password" class="form-control"> 
-  
+            <input type="password" placeholder="Enter Password" formControlName="password" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.password.errors }"> 
+            <div *ngIf="submitted && f.password.errors" class="invalid-feedback">
+                <div *ngIf="f.password.errors.required">Password is required</div>
+            </div>
+        </div>
             <button type="submit" class="login">Login</button> 
             <input type="checkbox" checked="checked"> Remember me 
         
