--- a/src/app/create-task/actions/contact-center/task-detail/task-detail.component.html
+++ b/src/app/create-task/actions/contact-center/task-detail/task-detail.component.html
@@ -1,5 +1,5 @@
 <div>
-  <div class="row col-md-12">
+  <div class="row col-md-12 task-details-b-pad">
     <div class="col-md-4">
       <label class="task-detail-label">Caller Name</label>
       <input type="text" pInputText />
@@ -9,7 +9,7 @@
       <input type="text" pInputText />
     </div>
   </div>
-  <div class="row col-md-12">
+  <div class="row col-md-12 task-details-b-pad">
     <div class=" col-md-4">
       <label class="task-detail-label">Action</label>
       <input type="text" pInputText />
@@ -19,25 +19,25 @@
       <input type="text" pInputText />
     </div>
   </div>
-  <div class="row col-md-12">
+  <div class="row col-md-12 task-details-b-pad">
     <div class=" col-md-4">
       <label class="task-detail-label">Fully Authenticated</label>
       <p-radioButton name="group1" value="yes" label="Yes" inputId="opt1"></p-radioButton>
       <p-radioButton name="group1" value="no" label="No" inputId="opt2"></p-radioButton>
     </div>
-    <div class=" col-md-4">
+    <div class="col-md-4">
       <label class="task-detail-label">Call Code</label>
       <p-radioButton name="group1" value="yes" label="Yes" inputId="opt1"></p-radioButton>
       <p-radioButton name="group1" value="no" label="No" inputId="opt2"></p-radioButton>
     </div>
   </div>
-  <div class="row col-md-12">
+  <div class="row col-md-12 task-details-b-pad">
     <div class=" col-md-4">
       <label class="task-detail-label">Task Priority</label>
       <p-dropdown [options]="taskPriority"></p-dropdown>
     </div>
   </div>
-  <div class="row col-md-12">
+  <div class="row col-md-12 task-details-b-pad">
     <div class=" col-md-1">
       <label class="task-detail-label">Call Details</label>
     </div>
