--- a/src/app/create-task/actions/contact-center/contact-center.component.html
+++ b/src/app/create-task/actions/contact-center/contact-center.component.html
@@ -77,7 +77,7 @@
       </div>
     </p-card>
   </div>
-  <div>
+  <div class="acc-details-mar">
     <p-card>
       <p-tabView>
         <p-tabPanel header="Task Detail">
