--- a/src/app/create-task/actions/contact-center/document/document.component.html
+++ b/src/app/create-task/actions/contact-center/document/document.component.html
@@ -48,8 +48,16 @@
                 </div>
                 Choose file to attach now or you will be required to attach a file later
                 <div class="content-t-mar">
-                    <button pButton type="button" label="Choose File"></button>
-                    <span>No file selected</span>
+                      <label class="btn btn-default">
+                        <input type="file" (change)="selectFile($event)" formControlName="fileName" required/>
+                      </label>
+                      <div *ngIf="documentDetailsForm.controls['fileName'].invalid && (documentDetailsForm.controls['fileName'].dirty || documentDetailsForm.controls['fileName'].touched)" class="alert alert-danger form-danger" role="alert">
+
+                        <div *ngIf="documentDetailsForm.controls['fileName'].errors.required">
+                          Document selection required
+                        </div>
+                    </div>
+                      <div class="alert alert-light" role="alert">{{ message }}</div>
                 </div>
             </div>  
             <div class="panel-btn">
