contact center data binding and home screen to contact center routing added

--- a/src/app/create-task/account/account-summary/account-summary.component.html
+++ b/src/app/create-task/account/account-summary/account-summary.component.html
@@ -15,7 +15,7 @@
                 <a routerLink="./">Account Maintenance</a>
                 <a routerLink="./">Acct Review Maintenance</a>
                 <a routerLink="./">Asset Transaction</a>
-                <a routerLink="../contact-center" [state]="{ accountNumber: accountNumber }">
+                <a routerLink="../contact-center" [state]="{data: contactCenterDetails}">
                     Contact Center
                 </a>
                 <a routerLink="./">DARS Approval</a>
