--- a/src/app/create-task/actions/contact-center/task-detail/task-detail.component.scss
+++ b/src/app/create-task/actions/contact-center/task-detail/task-detail.component.scss
@@ -8,3 +8,10 @@
 .task-details-b-pad{
     padding-bottom: 10px;
 }
+.button-style {
+    float: right;
+    margin-top: -32px;
+}
+.save-pad {
+    padding-right: 14px;
+}
