--- a/src/app/home/task/my-task-list/my-task-list.component.html
+++ b/src/app/home/task/my-task-list/my-task-list.component.html
@@ -23,7 +23,7 @@
       </td>
       <td>
         <span class="fa fa-search" style="padding-left: 23px;"></span>
-        <span class="pi pi-user-edit" style="padding-left: 39px;"></span>
+        <span class="pi pi-user-edit" (click)="onEditClick(rowData)" style="padding-left: 39px;"></span>
       </td>
     </tr>
   </ng-template>
