--- a/src/app/create-task/actions/contact-center/contact-center.component.html
+++ b/src/app/create-task/actions/contact-center/contact-center.component.html
@@ -8,39 +8,39 @@
         <div class="row col-md-12">
           <div class=" col-md-4">
             <label>Task ID</label>
-            <span class="label-pad">121110</span>
+            <span class="label-pad">{{contactCenterData?.taskID}}</span>
           </div>
           <div class=" col-md-4">
             <label>Status</label>
-            <span class="label-pad">Open</span>
+            <span class="label-pad">{{contactCenterData?.status}}</span>
           </div>
           <div class=" col-md-4">
             <label>Phone</label>
-            <span class="label-pad">+1(844)2356310</span>
+            <span class="label-pad">{{contactCenterData?.phoneNo}}</span>
           </div>
         </div>
         <div class="row col-md-12">
           <div class=" col-md-4">
             <label>Created</label>
-            <span class="label-pad">17/07/20</span>
+            <span class="label-pad">{{contactCenterData?.createdDate}}</span>
           </div>
           <div class=" col-md-4">
             <label>Email</label>
-            <span class="label-pad">test@wellsfargo.com</span>
+            <span class="label-pad">{{contactCenterData?.email}}</span>
           </div>
           <div class=" col-md-4">
             <label>Assigned User</label>
-            <span class="label-pad">Add user group</span>
+            <span class="label-pad">{{contactCenterData?.assignedUser}}</span>
           </div>
         </div>
         <div class="row col-md-12">
           <div class=" col-md-4">
             <label>Assigned Email</label>
-            <span class="label-pad">test-assign@wellsfargo.com</span>
+            <span class="label-pad">{{contactCenterData?.assignedEmail}}</span>
           </div>
           <div class=" col-md-4">
             <label>Account Service</label>
-            <span class="label-pad">Test</span>
+            <span class="label-pad">{{contactCenterData?.accountService}}</span>
           </div>
         </div>
       </div>
@@ -53,25 +53,25 @@
         <div class="row col-md-12">
           <div class=" col-md-4">
             <label>Account Number</label>
-            <span class="label-pad">7611245</span>
+            <span class="label-pad">{{contactDetailRequest?.accountNo}}</span>
           </div>
           <div class=" col-md-4">
             <label>Account Short Name</label>
-            <span class="label-pad">Test Name</span>
+            <span class="label-pad">{{contactCenterData?.accountShortName}}</span>
           </div>
           <div class=" col-md-4">
             <label>Main Acct Number</label>
-            <span class="label-pad">3441890</span>
+            <span class="label-pad">{{contactCenterData?.mainAccountNo}}</span>
           </div>
         </div>
         <div class="row col-md-12">
           <div class=" col-md-4">
             <label>Market Value</label>
-            <span class="label-pad">$200000</span>
+            <span class="label-pad">{{contactCenterData?.marketValue}}</span>
           </div>
           <div class=" col-md-4">
             <label>Branch Code</label>
-            <span class="label-pad">750112</span>
+            <span class="label-pad">{{contactCenterData?.branchCode}}</span>
           </div>
         </div>
       </div>
@@ -81,7 +81,7 @@
     <p-card>
       <p-tabView>
         <p-tabPanel header="Task Detail">
-           <tmt-task-detail></tmt-task-detail>
+           <tmt-task-detail [taskDetailData]="contactCenterData?.taskDetail"></tmt-task-detail>
         </p-tabPanel>
         <p-tabPanel header="Document">
             <tmt-document></tmt-document>
